# virentoftakoket

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  sample_recipes.json
core/: __init__.py  config.py  database.py
models/: __init__.py  profile.py  recipe.py  shopping_list.py  units.py  weekly_menu.py
routes/: __init__.py  admin.py  menu_new.py  pages.py  recipes.py
services/: __init__.py  menu_service.py  profile_service.py  recipe_repository.py  recipe_service.py  shopping_service.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
templates/admin/: db.html  edit.html  import.html  import_recipes.html  profile_settings.html  profiles.html  recipes.html  units.html
templates/menu/: new.html  week.html
templates/recipes/: detail.html  list.html  new.html
