[project]
name = "receptapp"
version = "0.1.0"
description = "Lokal FastAPI-baserad receptapp"
authors = [{ name = "", email = "" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
